# pystream

./: .gitignore  .loglogin  .readthedocs.yaml  BEAMLINE_CONFIG.md  README.md  TESTING_MOSALIGN.md  __init__.py  logger.py  pyproject.toml  pystream.py
.claude/: .nfs00000000022b354400000c31  settings.local.json
docs/: Makefile  api.md  conf.py  index.md  installation.md  quickstart.md  requirements.txt
docs/_static/: custom.css
docs/beamlines/: bl32ID.md  configuration.md  index.md  launcher_guide.md  txmbot.md
docs/plugins/: console.md  ellipse.md  imageinfo.md  index.md  line.md  metrics.md  mosalign.md  roi.md  scalebar.md  viewer.md
envs/: requirements-doc.txt  requirements.txt
pipelines/: p_invert.json  processors.json
processors/: invert.py  sum.py
pystream.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pystream/: beamline_config.py  procplug.py  pystream.py  scriptsnr_cnr.py
src/pystream/beamlines/_template_beamline/: __init__.py  example_plugin.py
src/pystream/beamlines/bl2BM/: __init__.py  detectorcontrol.py  mosalign.py
src/pystream/beamlines/bl32ID/: __init__.py  _launcher_template.py  agent.py  agent_tools.py  autocenter.py  blgui.py  datamap.py  detectorcontrol.py  energy_scan.py  launcher_template.py  mosaic.sh  mosalign.py  opticscalc.py  plugin_settings.py  qgmax.py  rotationaxis.py  softbpm.py  xanes2dgui.py  xanesgui.py
src/pystream/pipelines/: p_invert.json  processors.json  sum.json
src/pystream/plugins/: __init__.py  accumulate.py  console.py  differential.py  ellipse.py  line.py  metrics.py  mosaic.py  mosaic.sh  mosalign.py  roi.py  scalebar.py  viewer.py  zarrviewer.py
src/pystream/processors/: invert.py  sum.py
src/pystream/scripts/: difference.py  difference_plot.py  live_plot.py  snr_cnr.py  ssim.py  ssim_liveplot.py
test/: README.md  README_MOSALIGN_TEST.md  USAGE_GUIDE.md  generate_test_images.py  run_test.sh  stream_test.py  test_mosalign.py  test_mosalign_cli.py
