[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystream"
version = "2.0.0"
description = "Real-time NTNDArray viewer - PyQtGraph & VisPy support"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Alberto Mittone", email = "amittone@anl.gov" }]
dependencies = [
  "numpy>=1.21",
  "pvapy>=5.6.0",
  "PyQt5>=5.15",
  "pyqtgraph>=0.13.0",
  "Pillow>=9.0",
  "qscintilla==2.14.1",
]

[project.optional-dependencies]
vispy = ["vispy>=0.14.0"]
all = ["vispy>=0.14.0"]
dev = ["black", "flake8", "pytest"]

[project.scripts]
pystream = "pystream.pystream:main"
viewer = "pystream.plugins.viewer:main"
mosalign = "pystream.plugins.mosalign:main"
metrics = "pystream.plugins.metrics:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pystream*"]

[tool.setuptools.package-data]
pystream = ["pipelines/*.json"]
